WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109797
[WebGL][Qt] regression:
r142786
Build fix for Arm and Windows
https://bugs.webkit.org/show_bug.cgi?id=109797
Summary
[WebGL][Qt] regression:r142786 Build fix for Arm and Windows
Kalyan
Reported
2013-02-14 02:11:32 PST
Changeset 142786 has enabled support for OES_vertex_array_object. This has caused build breaks for Qt on arm and Windows platform.
Attachments
patch
(5.87 KB, patch)
2013-02-14 08:43 PST
,
Kalyan
no flags
Details
Formatted Diff
Diff
patch
(6.00 KB, patch)
2013-02-14 11:24 PST
,
Kalyan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Arvai
Comment 1
2013-02-14 04:49:15 PST
Maybe some defines are also missing from OpenGLESShims.h, too. If we add these functions to GraphicsContext3D in C:\WebKitBuildSlave\proba\WebKit\Source\WebCore\platform\graphics\opengl\GraphicsContext3DOpenGLCommon.cpp can it fix the build? I'll try it on my MSVC machine.
Kalyan
Comment 2
2013-02-14 08:43:01 PST
Created
attachment 188364
[details]
patch
Zoltan Arvai
Comment 3
2013-02-14 10:15:18 PST
It builds and runs fine on Windows with MSVC :) (In reply to
comment #2
)
> Created an attachment (id=188364) [details] > wip
Kalyan
Comment 4
2013-02-14 11:24:56 PST
Created
attachment 188388
[details]
patch
Csaba Osztrogonác
Comment 5
2013-02-14 16:03:54 PST
Comment on
attachment 188388
[details]
patch It works on ARM too. Thank for the fix, rs=me.
WebKit Review Bot
Comment 6
2013-02-14 16:36:53 PST
Comment on
attachment 188388
[details]
patch Clearing flags on attachment: 188388 Committed
r142937
: <
http://trac.webkit.org/changeset/142937
>
WebKit Review Bot
Comment 7
2013-02-14 16:36:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug