[WebGL][Qt] regression:r142786 Qt Build fix for Arm and Windows. https://bugs.webkit.org/show_bug.cgi?id=109797

Patch by Kondapally Kalyan <kalyan.kondapally@intel.com> on 2013-02-14
Reviewed by Csaba Osztrogonác.

After r142786, we use OpenGLShims to load necessary GL functions
exposed by ARB_vertex_array_object extension. Qt uses OpenGLShims
to load functions with GLES too. This patch adds support for loading the
equivalent functions on GLES exposed by OES_vertex_array_object.

* platform/graphics/OpenGLShims.cpp:
(WebCore::initializeOpenGLShims):
* platform/graphics/OpenGLShims.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@142937 bbb929c8-8fbe-4397-9dbb-9b2b20218538